--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.29.0"
+    "eslint": "^8.29.0",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
