--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "axios": "^1.2.2",
     "classnames": "^2.3.2",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
