--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.8",
     "axios": "^1.2.2",
     "classnames": "^2.3.2",
+    "date-fns": "^2.29.3",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
     "react": "18.2.0",
